Gaps on the home page have been fixed.

--- a/src/styles/FooterStyless.css
+++ b/src/styles/FooterStyless.css
@@ -7,6 +7,7 @@
 {
     background-color: #131315;
     flex-direction: column;
+    margin-top: -34.9px;
 }
 
 .sb-footer-links
